SEO improved and new logo added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>GLB Viewer - 3D Model Viewer for GLB Files</title>
+    <meta name="description" content="A modern, web-based 3D model viewer for GLB files. View and inspect 3D models directly in your browser with detailed model information. Secure, private, and efficient." />
+    <meta name="keywords" content="GLB viewer, 3D model viewer, GLB files, 3D visualization, web-based viewer, Three.js, React, TypeScript" />
+    <meta name="author" content="GLB Viewer" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="GLB Viewer - 3D Model Viewer for GLB Files" />
+    <meta property="og:description" content="View and inspect 3D models directly in your browser. Secure, private, and efficient GLB file viewer with detailed model information." />
+    <meta property="og:image" content="/vite.svg" />
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GLB Viewer - 3D Model Viewer for GLB Files" />
+    <meta name="twitter:description" content="View and inspect 3D models directly in your browser. Secure, private, and efficient GLB file viewer with detailed model information." />
+    <meta name="twitter:image" content="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
